# haskell-hangman-v2

./: hie.yaml  project.cabal  words.txt
app/: Hangman  Hangman.hs
src/: HangmanModule  HangmanModule.hs
