Cabal-Version:      2.4
Name:               haskell-hangman
Version:            0.1.0.0
Author:             Dennis Joustra (JonkoXL)
Maintainer:         djoustra@gmail.com
Build-Type:          Simple
Copyright:           © 2022 Dennis Joustra (JonkoXL)
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:     src
  exposed-modules:    HangmanModule
  
  build-depends:      aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable Hangman
  hs-source-dirs:       app
  main-is:              Hangman.hs
  ghc-options:          -threaded -rtsopts "-with-rtsopts=-T"

  
  build-depends:      aeson

                     , base ^>=4.14.1.0
                     , bytestring
                     , directory
                     , random
                     , text
                     , haskell-hangman
            

